# noether

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLA.md  LICENSE.txt  README.md  pyproject.toml  pytest.ini
.github/: CODEOWNERS  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cla.yml  doc-delete-on-pr-closed.yml  docs.yml  pr-validation.yml  pre-commit.yml  release.yml  run-tests.yml
boilerplate_project/: README.MD
boilerplate_project/callbacks/: __init__.py  base.py
boilerplate_project/configs/: base_experiment.yaml  inference_config.yaml
boilerplate_project/configs/callbacks/: base_callback.yaml
boilerplate_project/configs/datasets/: base_dataset.yaml
boilerplate_project/configs/model/: base_model.yaml
boilerplate_project/configs/optim/: adamw.yaml
boilerplate_project/configs/tracker/: base_tracker.yaml
boilerplate_project/configs/trainer/: base_trainer.yaml
boilerplate_project/datasets/: __init__.py  base.py
boilerplate_project/models/: __init__.py  base.py
boilerplate_project/pipelines/: __init__.py  base_multistage.py
boilerplate_project/schemas/: config_schema.py
boilerplate_project/schemas/collator/: base_collator_config.py
boilerplate_project/schemas/models/: base_model_config.py
boilerplate_project/schemas/trainer/: boilerplate_trainer_config.py
boilerplate_project/trainer/: __init__.py  base.py
ci/rules/: copyright.py
docs/: Makefile  README.md
docs/source/: conf.py  index.rst
docs/source/_static/: default_furo.scss  emmi_docs_theme.css  force_light_theme.js
docs/source/explanation/: design_principles_and_limitations.rst  index.rst  introduction_to_noether_framework.rst  key_concepts.rst
docs/source/guides/: index.rst  linux_cuda_setup.rst  working_with_cli.rst
docs/source/guides/data/: how_to_load_custom_dataset.rst  how_to_use_private_data_source.rst  how_to_write_a_sample_processor.rst  how_to_write_data_collators.rst  how_to_write_data_preprocessors.rst
docs/source/guides/inference/: how_to_run_evaluation_on_trained_models.rst
docs/source/guides/training/: experiment_tracking.rst  how_to_configure_all_training_options.rst  how_to_use_custom_model.rst  how_to_write_custom_loss_or_metric.rst  use_callbacks.rst
docs/source/noether/: dataset_zoo.rst  design_principles_and_limitations.rst  index.rst  introduction_to_noether_framework.rst  key_concepts.rst  model_zoo.rst
docs/source/noether/io/: caching.rst
docs/source/reference/: hardware_setup.rst  index.rst
docs/source/tutorials/: getting_started_install_and_verify.rst  index.rst  prerequisites.rst  running_first_inference.rst  training_first_model_with_code.rst  training_first_model_with_configs.rst
src/noether/core/: types.py
src/noether/core/callbacks/: __init__.py  base.py  periodic.py
src/noether/core/configs/: __init__.py  hyperparameters.py  wandb.py
src/noether/core/distributed/: __init__.py  config.py  gather.py  utils.py
src/noether/core/extractors/: __init__.py  (+1 more)
src/noether/data/: __init__.py  container.py  point_cloud.py  stats.py
src/noether/io/: aistore.py  credentials.py  logging_config.py  logging_progress.py  providers.py  verification.py
tests/test_training_pipeline/: conftest.py  test_training_pipeline.py
tests/unit/noether/: test_distributed_gather_nondistributed.py  test_distributed_run_parse_devices.py
tutorial/: README.MD  train_shapenet_upt.py
tutorial/callbacks/: __init__.py  surface_volume_evaluation_metrics.py
tutorial/configs/: __init__.py  train_ahmedml.yaml  train_caeml.yaml  train_drivaerml.yaml  train_drivaernet.yaml  train_shapenet.yaml  train_wing.yaml
tutorial/configs/callbacks/: training_callbacks_caeml.yaml  training_callbacks_shapenet.yaml
tutorial/configs/data_specs/: caeml.yaml  emmi_wing.yaml  shapenet_car.yaml
tutorial/configs/dataset_normalizers/: caeml_dataset_normalizers.yaml  shapenet_dataset_normalizers.yaml  wing_dataset_normalizers.yaml
tutorial/configs/dataset_statistics/: ahmedml_stats.yaml  drivaerml_stats.yaml  drivaernet++_stats.yaml  shapenet_car_stats.yaml  wing_stats.yaml
tutorial/configs/datasets/: caeml_dataset.yaml  shapenet_dataset.yaml
tutorial/configs/model/: ab_upt.yaml  composite_transformer.yaml  transformer.yaml  transolver.yaml  upt.yaml
tutorial/configs/optimizer/: adamw.yaml  adamw_transolver.yaml  lion.yaml
tutorial/configs/pipeline/: caeml_pipeline.yaml  shapenet_pipeline.yaml
tutorial/configs/tracker/: dev_refactoring.yaml  development_tracker.yaml  disabled.yaml  shapenet_car_experiments_tracker.yaml
tutorial/configs/trainer/: caeml_trainer.yaml  shapenet_trainer.yaml
tutorial/jobs/: train_ahmedml.job  train_drivaerml.job  train_drivaernet.job  train_shapenet.job
tutorial/jobs/experiments/: ahmedml_experiments.txt  drivaerml_experiments.txt  shapenet_experiments.txt
tutorial/model/: __init__.py  ab_upt.py  base.py  composite_transformer.py  transformer.py  transolver.py  upt.py
tutorial/model/composite_components/: __init__.py  composite_transformer_block.py
tutorial/pipeline/: __init__.py
tutorial/pipeline/multistage_pipelines/: __init__.py  aero_multistage.py
tutorial/pipeline/sample_processors/: __init__.py  anchor_point_sampling.py
tutorial/pipelines/collators/: __init__.py
tutorial/pipelines/multistage_pipelines/: aero_multistage.py
tutorial/pipelines/sample_processors/: __init__.py  anchor_point_sampling.py  concat_tensor.py  default_tensor.py  surface_mask.py
tutorial/schemas/: config_schema.py
tutorial/schemas/callbacks/: __init__.py  callback_config.py
tutorial/schemas/datasets/: __init__.py  aero_dataset_config.py
tutorial/schemas/models/: __init__.py  ab_upt_config.py  any_model_config.py  base_config.py  composite_transformer_config.py  transformer_config.py  transolver_config.py  transolver_plusplus_config.py  upt_config.py
tutorial/schemas/pipelines/: aero_pipeline_config.py
tutorial/schemas/trainers/: __init__.py  automotive_aerodynamics_trainer_config.py
tutorial/trainers/: __init__.py  automotive_aerodynamics_cfd.py
(+452 files in other folders)
